# orange

./: .gitignore  .gitmodules  3D_POSE_INTEGRATION_PLAN.md  CITATION.bib  CMakeLists.txt  JARVIS_3D_PIPELINE_DETAILED.md  JARVIS_ANALYSIS.md  JARVIS_DEPLOYMENT_GUIDE.md  LICENSE  Makefile  ORANGE_PROJECT_WIKI.md  README.md  build.sh  build_benchmark.sh  build_client.sh  build_headless.sh  build_tools.sh  check_focus.py  check_focus_all.sh  circle.xml  convert_jarvis_to_tensorrt.py  debug.sh  debug.txt  default.xml  headless.sh  headless_client.sh  imgui.ini  install.sh  orange.desktop  orange_headless_client_obs.cpp  out_camera_data.xml  run.sh  run_cam_server.sh  run_orange.sh  server_build.sh  start_server.sh  tree.txt  vcpkg.json
benchmark/: yolo_offline.cpp  yolo_offline_tester.cpp
config/: 2002496.json  2002496.json.example  710032.json
config/network/: endpoints.json.example
csv_prior/: Cam2005325_meta.csv  Cam2005325_obb.csv  class_names.txt
docs/: OBB_INTEGRATION.md  YOLO  YOLO.md  clonezilla_image.md  install_ffmpeg.md  install_linux_cuda_eSDK.md  install_opencv.md  install_tensorrt.md  ptp.md  recording_modes_and_video_save.md  remote_focus_and_streaming.md  setup_notes_mouse_rig.md
example_config/: 2012856.json  2012858.json  2012859.json  2012860.json
examples/: build_npp.sh  color_debayer_test  color_debayer_test.cpp  color_debayer_test2  color_debayer_test2.cpp  color_debayer_test3  color_debayer_test3.cpp  color_debayer_test4  color_debayer_test4.cpp  example_ffmpeg  example_ffmpeg.cpp  helper_cuda.h  simple_build_npp.sh  thread.h
ffnvenc/: build_ffnvenc.sh  encode_video.cpp  output_example.cpp
gpu/: video_capture_gpu.h
include/: camera.h  camera_manager.h  camera_params.h  emergent_camera.h  encoder_config.h  fetch_generated.h  frame_streaming.h  fs_utils.hpp  genericmutex.h  gpu_manager.h  gpu_streaming.h  gpu_video_encoder.h  gui.h  gx_helper.h  image_processing.h  offthreadmachine.h  opengldisplay.h  ptp_manager.h  types.h  video_capture.h
include/gui/: camera_control_panel.h  camera_preview_window.h  main_window.h
jarvis/: config.yaml
jarvis/config/: project_manager.py
jarvis/dataset/: dataset2D.py  dataset3D.py  datasetBase.py  utils.py
jarvis/example_predictions/predictions3D/Predictions_3D_20250915-152414/: data3D.csv  info.yaml
jarvis/hybridnet/: repro_layer.py
jarvis/prediction/: jarvis2D.py  jarvis3D.py  predict3D.py
jarvis/utils/: reprojection.py
quick_build/: orange.sh  orange_client.sh  yolo_offline.sh
schema/: .obj.fbs.swp  ctrl.fbs  doc_flatbuffers.md  fetch.fbs  message_wrapper.fbs  obj.fbs  obj_pose_2d.fbs  objpose.fbs  parse_schema.sh  yolo_payload.fbs
scripts/: rigroom_reset_nic.sh  rob_office.sh  set_up_ptp.txt
src/: CMakeLists.txt  FFmpegWriter.cpp  FFmpegWriter.h  FrameDetector.cpp  FrameDetector.h  FramePresenterGLX.cpp  FramePresenterGLX.h  FrameSaver.cpp  FrameSaver.h  JarvisFrameDetector.cpp  JarvisFrameDetector.h  LJM_StreamUtilities.h  LJM_Utilities.h  OBB_DETECTOR_README.md  SyncDisplay.cpp  SyncDisplay.h  SynchronizedDisplay.cpp  SynchronizedDisplay.h  acquire_frames.cpp  acquire_frames.h  acquire_frames_headless.cpp  acquire_frames_headless.h  aruco_detection.h  aruco_nano.h  autolabel_yolo_obb_with_priors.py  buffer_utils.cpp  buffer_utils.h  calibration_gui.h  cam_server.cpp  cam_servers.cpp  camera.cpp  camera.h  camera_calibration.h  camera_driver_helper.cpp  camera_driver_helper.h  camera_manager.cpp  camera_manager.h  color_conversion_gpu.cu  color_conversion_gpu.h  color_debayer.cpp  (+138 more)
src/NvEncoder/: NvEncoder.cpp  NvEncoderCLIOptions.h  NvEncoderCuda.cpp  NvEncoderGL.cpp  NvEncoderGL.h  NvEncoderOutputInVidMemCuda.cpp  NvEncoderOutputInVidMemCuda.h
src/gui/: camera_control_panel.cpp  camera_preview_window.cpp  main_window.cpp
src/pulser/: pulser.ino
